<resources>
    <string name="app_name">SEAM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_name">User Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_sales_orders">Sales Orders</string>
    <string name="menu_packages">Packages</string>
    <string name="menu_invoices">Invoices</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- Add New Package -->
    <string name="select_item_hint">You can manually include items to be packed from the sales order by enabling the above option</string>

    <!-- Add New Shipment -->
    <string name="shipment_package">Start Typing to select package</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
